[tool.poetry]

name = "ballotbuddies"
version = "1.0"

description = "An app to help friends hold each other accountable to vote in every election."
authors = ["Citizen Labs <info@citizenlabs.org>"]
license = "GPLv3"

[tool.poetry.dependencies]

python = "^3.10"

# Django
django = "^3.2.8"
django-cors-headers = "*"
django-debug-toolbar = "^3.2.2"
django-grappelli = "*"
django-multi-email-field = "*"
django-sesame = "^2.4"
crispy-bootstrap5 = "*"

# Storage
dj-database-url = "~0.4.2"
psycopg2-binary = "^2.6"
django-redis = "^4.12.1"

# Deployment
whitenoise = "^5.3"
gunicorn = "^20.0.4"
bugsnag = "^4.1.1"

# Utilities
minilog = "^2.0"
requests = "^2.26"
ua-parser = "*" # Optional 'django-sesame' to detect Safari
zipcodes = "^1.2.0"
us = "^2.0.2"

[tool.poetry.dev-dependencies]

# Formatting
black = "=21.8b0"
isort = "=5.9.3"

# Linters
pylint = "~2.11.1"
mypy = "~0.910"
django-stubs = "~1.9.0"
types-freezegun = "*"
types-requests = "*"

# Testing
pytest = "^6.2.5"
pytest-django = "*"
pytest-describe = "^2.0"
pytest-expecter = "^2.0"
pytest-randomly = "*"
pytest-vcr = "*"
pytest-cov = "^2.8.0"
freezegun = "^1.1"
coverage = "^5.0"
coveragespace = "^4.0"

# Server
django-livereload-server = "~0.3.2"
honcho = "^1.1"

# E2E
splinter = "~0.16.0"

# Tooling
ipython = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
sniffer = "*"

[tool.isort]

profile = "black"

known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]

django_settings_module = "config.settings.local"
