[tool.poetry]

name = "ballotbuddies"
version = "1.0"

description = "An app to help friends hold each other accountable to vote in every election."
authors = ["Citizen Labs <info@citizenlabs.org>"]
license = "GPLv3"

[tool.poetry.dependencies]

python = "3.11.6"

# Django
django = "~4.2.8"
django-annoying = "^0.10.6"
django-browser-reload = "^1.3"
django-cors-headers = "*"
django-debug-toolbar = "^3.2.4"
django-htmx = "^1.16"
django-multi-email-field = { git = "https://github.com/aht007/django-multi-email-field", rev = "99a27ccdad465ff13a08cdfdd6b2612f817d32fc" } # https://github.com/fle/django-multi-email-field/pull/20
django-sesame = "^2.4"
django-user-agents = "~0.4"
crispy-bootstrap5 = "*"

# API
djangorestframework = "~3.14"

# Storage
dj-database-url = "^2.1"
psycopg = "^3.1.14"
django-redis = "^4.12.1"

# Deployment
gunicorn = "^20.1"
uvicorn = "~0.17"
whitenoise = "^5.3"
bugsnag = "^4.1.1"

# Utilities
minilog = "^2.0"
requests = "^2.26"
ua-parser = "*"     # optional 'django-sesame' dependency to detect Safari
zipcodes = "^1.2.0"
us = "^2.0.2"

[tool.poetry.dev-dependencies]

# Formatting
black = "^23.11"
isort = "^5.12"

# Linters
pylint = "~2.15"
mypy = "^1.4"
django-stubs = { version = "^4.2", extras = ["compatible-mypy"] }
types-requests = "*"

# Testing
pytest = "^7.2"
pytest-django = "^4.5"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-randomly = "*"
pytest-vcr = "*"
pytest-cov = "^4.0"
splinter = "~0.19"
selenium = "*"
coveragespace = "^6.0"
coveralls = "*"

# Tooling
honcho = "^1.1"
ipython = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
sniffer = "*"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]

django_settings_module = "config.settings.test"

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "config.settings.test"

addopts = """
--strict-markers
--pdbcls=tests.debugger:Debugger

--quiet
-r sxX
--show-capture=log

--fail-on-template-vars

--cov=ballotbuddies
--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

filterwarnings = """
error:::django.db.models.fields.related_lookups:52
"""
